--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: tema anibal
-Theme URI: https://fb.com/anibalyucrac
-Author: anibal yucra curo
-Author URI: https://fb.com/anibalyucrac
+Theme Name: tema tania
+Theme URI: khg
+Author: tania pareja chocce
+Author URI: ljhk
 Description: este es un tema desarrollado como practica por los estudiantes del semestre V de la carrera de DISEÑO Y PROGRAMCIÓN WEB del IES HUANTA
 Tags: blog, one-column, custom-background, custom-colors, custom-logo, custom-menu, editor-style, featured-images, footer-widgets, full-width-template, rtl-language-support, sticky-post, theme-options, threaded-comments, translation-ready, block-styles, wide-blocks, accessibility-ready
 Version: 1.0
